--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 				playsinline
 				crossOrigin="anonymous"
 				id="arvideo">
-				<source src="Data/DancingMan.mp4" type='video/mp4'>
+				<source src="webAR/Data/DancingMan.mp4" type='video/mp4'>
 			</video>
 
 		<script src="js/third_party/three.js/three.min.js"></script>
 		<script src="dist/ARnft.js"></script>
 
     <script>
-			ARnft.ARnft.init(640, 480, "DataNFT/Visitenkarte_webdemo_dancingman", 'config.json', true)
+			ARnft.ARnft.init(640, 480, "webAR/DataNFT/Visitenkarte_webdemo_dancingman", 'config.json', true)
 			.then((nft) => {
 				nft.addVideo('arvideo', 180);
 			}).catch((error) => {
