--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script>
 			ARnft.ARnft.init(640, 480, "webAR/DataNFT/Visitenkarte_Webdemo_dancingman", 'config.json', true)
 			.then((nft) => {
-				nft.addVideo('arvideo', 180);
+				nft.addVideo('arvideo', 0.34, 1051, 697);
 			}).catch((error) => {
 				console.log(error);
 			});
