added drop down and image changer 2

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         640,
 				480,
 				//"webAR/DataNFT/Visitenkarte_Webdemo_dancingman",
-				nftPath,
+				document.getElementById("selImage").value === "Data/DancingMan.mp4" ? "webAR/DataNFT/Visitenkarte_Webdemo_dancingman" : "webAR/DataNFT/openpose_bw",
         "config.json",
         true
       )
