--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</form>
 		
 		<form action="" class="ui audioButton">
-      <h3>Activate Sound</h3>
+      <h3>Activate Sound 1</h3>
       <fieldset>
         <input type="button" value="Activate Sound" onclick="activateSound()" />
       </fieldset>
@@ -51,7 +51,8 @@
 				//"webAR/DataNFT/Visitenkarte_Webdemo_dancingman",
 				changeNFT(document.getElementById("selImage").value),
         "config.json",
-        true
+				true,
+				true,
       )
         .then((nft) => {
           nft.addVideo("arvideo", 0.35, 1051, 697);
